--- a/pom.xml
+++ b/pom.xml
@@ -416,6 +416,18 @@
                                 <version>${project.version}</version>
                             </dependency>
                         </dependencies>
+                        <distributionManagement>
+		                   <snapshotRepository>
+		                     <id>nexusRepo</id>
+		                     <url>http://34.204.80.227:8081/repository/arunasnapshot/</url>
+		                   </snapshotRepository>
+		
+		                <repository>
+		                  <id>nexusRepo</id>
+		                  <url>http://34.204.80.227:8081/repository/arunarelease/</url>
+		                </repository>
+                	 </distributionManagement>
+      
                     </plugin>
                 </plugins>
             </build>
